--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   font-size: 2.4rem;
   font-family: sans-serif;
   color: #5a3e2b;
-  font-family: "Quicksand";
+  font-family: "Courrier New";
   font-weight: 500;
 }
 
@@ -28,7 +28,7 @@ body {
 h1 {
   text-align: center;
   background-color: #f4a226;
-  font-family: "Monoton";
+  font-family: "Panic", cursive;
   font-size: 8rem;
   text-transform: uppercase;
   font-weight: 400;
